fix display of menu on mobile to show X button over webpage

--- a/renocar-webpage/httpdocs/css/style-modern.css
+++ b/renocar-webpage/httpdocs/css/style-modern.css
@@ -144,6 +144,10 @@ a {
         background: var(--navy);
         padding: 8px 0;
     }
+
+    .navbar-offcanvas.in {
+        z-index: 1001;
+    }
 }
 
 /* Marketing Section - Full bleed background
